
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int (* write ) (TYPE_1__*,void const*,int) ;} ;
typedef TYPE_1__ smd_channel_t ;


 int stub1 (TYPE_1__*,void const*,int) ;

int smd_write(smd_channel_t *ch, const void *data, int len)
{
 return ch->write(ch, data, len);
}
